--- a/richfeyn/app/templates/form.html
+++ b/richfeyn/app/templates/form.html
@@ -29,8 +29,7 @@
     <title>RichFeyn</title>
 </head>
 <body>
-    <!-- navbar starts -->
-    <!-- navbar starts -->
+     <!-- navbar starts -->
     <nav id="navbar">
         <div class="logo">
             <img src="{% static 'images/newlogo2.png'%}" alt="Logo Image">
@@ -44,11 +43,11 @@
             <li><a href="{% url 'home'%}">Home</a></li>
             <li><a href="#hiw">How it works</a></li>
             <!-- <li><a onclick="change()" href="#">Product demo</a></li> -->
+            <li><a  href="#features">Features</a></li>
             <li><a  href="#">Product demo</a></li>
             <li><a href="#faq">Faq</a></li>
-            <li><a href="#Footer">Contact Us</a></li>
-                        <li><a class="join-button" href=" {% url 'formview'%}">Preorder</a></li>
-
+            <li><a href="#Footer">About us</a></li>
+            <li><a class="join-button" href=" {% url 'formview'%}">Preorder</a></li>
         </ul>
     </nav>
     <br>
@@ -58,11 +57,11 @@
 <div class="form_container">
 <form class="signup" method="post" action="{% url 'form'%}">{% csrf_token %}
   <h1 class="heading">Signup</h1>
-    <input type="text" name="name" placeholder="text" id="text">
-    <input type="email" name="email" placeholder="email" id="text">
-    <input type="text" name="city" placeholder="city" id="text">
-    <input type="number" name="phone" placeholder="phone" id="text">
-    <input type="text" name="comment" placeholder="comment" id="text">
+    <input type="text" name="name" placeholder="Name" id="text">
+    <input type="email" name="email" required placeholder="Email *" id="text">
+    <input type="text" name="city" placeholder="City" id="text">
+    <input type="number" name="phone" placeholder="Phone" id="text">
+    <input type="text" name="comment" placeholder="Comment" id="text">
     <div class="btn_cont">
     <button class="submit_btn" type="submit" style="color:aliceblue ; position: relative; align-items: center;">SUBMIT</button>
       </div>
