--- a/richfeyn/app/templates/home.html
+++ b/richfeyn/app/templates/home.html
@@ -36,9 +36,10 @@
             <li><a href="{% url 'home'%}">Home</a></li>
             <li><a href="#hiw">How it works</a></li>
             <!-- <li><a onclick="change()" href="#">Product demo</a></li> -->
+            <li><a  href="#features">Features</a></li>
             <li><a  href="#">Product demo</a></li>
             <li><a href="#faq">Faq</a></li>
-            <li><a href="#Footer">Contact Us</a></li>
+            <li><a href="#Footer">About us</a></li>
             <li><a class="join-button" href=" {% url 'formview'%}">Preorder</a></li>
         </ul>
     </nav>
@@ -107,7 +108,7 @@ font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Co
 <!-- how it works ends here -->
 
 <!-- carowsel pending -->
-    <div class="containers" data-autoplay="true">
+    <div id="features" class="containers" data-autoplay="true">
         <div class="slide"> <img
                 src="{% static 'images/carowsel/cr1.png'%}"
                 alt="nature" /></div>
@@ -203,7 +204,7 @@ font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Co
           </div>
           <h3>Scalability</h3>
           <p  id="faq">
-            The technology behind Richfeyn's smart containers could potentially be applied to other pantry staples or even non-food items, providing opportunities for scalability and growth.
+            The technology behind RichFeyn's smart containers could potentially be applied to other pantry staples or even non-food items, providing opportunities for scalability and growth.
           </p>
         </div>
       </div>
@@ -338,7 +339,7 @@ It will help share your consumption details (with nutrition tracker feature) to 
         </div>
               RichFeyn</h5>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 70px;">
-            <p>Richfeyn sells smart containers that monitor daily use of almonds and pulses, and automatically reorder when stock runs low. The containers are synced with an app and cloud server, providing a seamless and convenient experience for healthy snacking. Join Richfeyn today to enjoy hassle-free access to nutritious food.</p>
+            <p>RichFeyn sells smart containers that monitor daily use of almonds and pulses, and automatically reorder when stock runs low. The containers are synced with an app and cloud server, providing a seamless and convenient experience for healthy snacking. Join RichFeyn today to enjoy hassle-free access to nutritious food.</p>
           </div>
           <hr class="clearfix w-100 d-md-none">
           <div id="link10" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
