--- a/richfeyn/app/templates/privacy.html
+++ b/richfeyn/app/templates/privacy.html
@@ -21,8 +21,7 @@
     <title>RichFeyn</title>
 </head>
 <body>
-    <!-- navbar starts -->
-    <!-- navbar starts -->
+     <!-- navbar starts -->
     <nav id="navbar">
         <div class="logo">
             <img src="{% static 'images/newlogo2.png'%}" alt="Logo Image">
@@ -36,15 +35,16 @@
             <li><a href="{% url 'home'%}">Home</a></li>
             <li><a href="#hiw">How it works</a></li>
             <!-- <li><a onclick="change()" href="#">Product demo</a></li> -->
+            <li><a  href="#features">Features</a></li>
             <li><a  href="#">Product demo</a></li>
             <li><a href="#faq">Faq</a></li>
-            <li><a href="#Footer">Contact Us</a></li>
-                        <li><a class="join-button" href=" {% url 'formview'%}">Preorder</a></li>
-
+            <li><a href="#Footer">About us</a></li>
+            <li><a class="join-button" href=" {% url 'formview'%}">Preorder</a></li>
         </ul>
     </nav>
     <br>
     <!-- nav ends -->
+  
 
  
 
