--- a/richfeyn/app/templates/home.html
+++ b/richfeyn/app/templates/home.html
@@ -1,53 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-      {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+{% extends "main.html" %}
+
+{% block title%}
+Home
+{% endblock%}
+
+
+{% block extra_head %}
+{% load static%}
+
     <link rel="stylesheet" href=" {% static 'css/style.css'%}"/>
-    <link rel="icon" href="{% static 'images/title2.png'%}" type="image/icon type" sizes="100x100">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href=" {% static 'css/input.css'%}"/>
+
+{% endblock %}
 
 
-   <!-- bootstrap cdn -->
-       <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
-  <!-- for video -->
-    <!-- <link rel="stylesheet" href="https://vjs.zencdn.net/c/video-js.css"/> -->
+{% block content%}
 
-    <title>RichFeyn</title>
-
-  
-</head>
-<body>
-    <!-- navbar starts -->
-    <nav id="navbar">
-        <div class="logo">
-            <img src="{% static 'images/newlogo2.png'%}" alt="Logo Image">
-        </div>
-        <div class="hamburger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-        <ul class="nav-links">
-            <li><a href="{% url 'home'%}">Home</a></li>
-            <li><a href="#hiw">How it works</a></li>
-            <!-- <li><a onclick="change()" href="#">Product demo</a></li> -->
-            <li><a  href="#features">Features</a></li>
-            <li><a  href="#">Product demo</a></li>
-            <li><a href="#faq">Faq</a></li>
-            <li><a href="#Footer">About us</a></li>
-            <li><a class="join-button" href=" {% url 'formview'%}">Preorder</a></li>
-        </ul>
-    </nav>
-    <br>
-    <!-- nav ends -->
-
-
-    <!-- intro -->
 
     
 <div class="half-half-image-text">
@@ -59,10 +28,11 @@
   </div> -->
   <div class="row">
     <div class="col-12 col-lg-6">
-      <div class="content" style="display: flex;flex-direction: column !important;">
-        <h1 style="color: #fff; font-weight: 900 !important; 
-font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Condensed',sans-serif;">Never r​un out of kitchen supplies</h1><br>
-        <p >Ric​hFeyn comprises of smart containers which restocks automatically</p>
+      <div class="content" style="display: flex;flex-direction: column !important; font-family: 'Helvetica Neue', sans-serif;">
+        <h1 style="color: #fff; 
+    font-family: 'Trebuchet MS' , sans-serif !important ;
+">Never r​un out of kitchen supplies</h1><br>
+        <p style="font-family: 'Trebuchet MS' , sans-serif !important ;" class="rich_data" >Ric​hFeyn comprises of smart containers which restocks automatically</p>
         
       </div>
 
@@ -95,8 +65,8 @@ font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Co
     <section   class ="main_contain"> 
         <div class="main_head">
         <h1  class="head_text" style="
-font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Condensed',sans-serif; font-weight: 800; color: #fff !important;" > How it works ?</h1><br>
-            <p class="head_content">Weight of food item in the containers can be viewed in an app. When the item is about to run out/about to expire, that item gets added to the cart or orders automatically</p>
+font-family: 'Trebuchet MS' , sans-serif !important ;  color: #fff !important;" > How it works ?</h1><br>
+            <p class="head_content" style="font-family: 'Trebuchet MS' , sans-serif !important ;">Weight of food item in the containers can be viewed in an app. When the item is about to run out/about to expire, that item gets added to the cart or orders automatically</p>
         </div>
 
         <div class="flow_chart">  
@@ -152,8 +122,9 @@ font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Co
           <div class="icon-wrapper">
             <i class="fa-solid fa-chart-line"></i>
           </div>
-          <h3>No Food Wastage</h3>
-          <p>
+    
+          <h3 style="font-family: 'Trebuchet MS' , sans-serif !important ; ">No Food Wastage</h3>
+          <p style="font-family: 'Trebuchet MS' , sans-serif !important ; ">
            Consume food when it is fresh with expiry alerts and donate excess food
           </p>
         </div>
@@ -165,8 +136,8 @@ font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Co
             <i class="fa-solid fa-people-group"></i>
            
           </div>
-          <h3>Improve Health</h3>
-          <p>
+          <h3 style="font-family: 'Trebuchet MS' , sans-serif !important ; ">Improve Health</h3>
+          <p style="font-family: 'Trebuchet MS' , sans-serif !important ; ">
            Eat the fresh nutritious food recommended by your fitness trainer/  doctor/ nutritionist
           </p>
         </div>
@@ -318,105 +289,4 @@ It will help share your consumption details (with nutrition tracker feature) to 
 
 
 <!-- faq section ends here -->
-
-
-<!-- memes start here -->
-
-<!-- meme ends here -->
-
-
-<!-- footer -->
- <footer id="Footer" class="page-footer font-small stylish-color-dark pt-4">
-      <div  class="container text-center text-md-left">
-        <div class="row">
-          <div class="col-md-4 mx-auto">
-            <!-- Content -->
-            
-            <h5 style="display: flex; flex-direction: row !important; align-items: center; justify-content: center;" class="flex-row font-weight-bold mt-3 fs-4 mb-4">
-              
-              <div class="logo">
-            <img src="{% static 'images/newlogo2.png'%}" alt="Logo Image">
-        </div>
-              RichFeyn</h5>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 70px;">
-            <p>RichFeyn sells smart containers that monitor daily use of almonds and pulses, and automatically reorder when stock runs low. The containers are synced with an app and cloud server, providing a seamless and convenient experience for healthy snacking. Join RichFeyn today to enjoy hassle-free access to nutritious food.</p>
-          </div>
-          <hr class="clearfix w-100 d-md-none">
-          <div id="link10" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-          
-            <h6 class="text-uppercase font-weight-bold mt-5">Useful links</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 70px;">
-            <p>
-              <a href="{% url 'privacy'%}" class="privacy">Privacy and Policy</a>
-            </p>
-
-          </div>
-          <hr class="clearfix w-100 d-md-none">
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <h6 class="text-uppercase font-weight-bold mt-5">Contact</h6>
-            <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-            <p>
-              <i class="fas fa-home mr-3"></i> Mumbai, Maharashtra</p>
-            <p>
-              <i class="fas fa-envelope mr-3"></i> Reach us at contact@richfeyn.com</p>
-            <p>
-              <i class="fas fa-phone mr-3"></i> + 91 80254 52xxx</p>
-            <p>
-              <i class="fas fa-print mr-3"></i> + 91 80254 55xxx</p>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <!-- Call to action -->
-      <ul  class="list-unstyled list-inline text-center py-2">
-        <li class="list-inline-item">
-          <h5 class="mb-1">Register for free</h5>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeP7PWrx9hIw5e6XWdNqCBRhQjBBCXhkO1zGxsa01DAJb_kAg/viewform" class="btn btn-outline-danger btn-rounded">Sign up!</a>
-        </li>
-      </ul>
-      <hr>
-      <!-- Social buttons -->
-      <div class="hover-effect1">
-      <ul   class="list-unstyled list-inline text-center">
-        <li class="list-inline-item">
-          <a href="https://www.facebook.com/codewithfaraz" title="Facebook"><i style="color:white;" class="fa fa-facebook"></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://www.twitter.com/codewithfaraz" title="Twitter"><i class="fa fa-twitter"></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://www.instagram.com/codewithfaraz" title="Instagram"><i class="fa fa-instagram"></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a href="https://www.youtube.com/@codewithfaraz" title="Youtube"><i class="fa fa-youtube"></i></a>
-        </li>
-        <li class="list-inline-item">
-          <a href="#." title="Github"><i class="fa fa-github"></i></a>
-        </li>
-      </ul>
-    </div>
-      <!-- Copyright -->
-      <div   class="footer-copyright text-center py-3">
-       Made with love ❤
-      </div>
-    </footer>
-
-
-<!-- footer ends -->
-    <!--intro ends  -->
-
-
-   <script src="https://unpkg.co/gsap@3/dist/gsap.min.js"></script>
-      <script src="{% static 'js/script.js' %}"></script>
-    
-      <!-- <script src="https://vjs.zencdn.net/c/video.js"></script> -->
-          <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-           <script src="https://kit.fontawesome.com/4d0b4c932e.js" crossorigin="anonymous"></script>
-
-           <!-- jquery for fade -->
-   
-           
-</body>
-</html>
+{% endblock %}
