--- a/richfeyn/app/static/css/form.css
+++ b/richfeyn/app/static/css/form.css
@@ -1,6 +1,6 @@
 .form_container{
     margin-top: 5px;
-    width: 80%;
+    width: 90%;
     height: 60%;
     display: flex;
     flex-direction: column;
@@ -18,11 +18,12 @@ margin-bottom: 100px;
     flex-direction: column; 
     height: 85%;
         /* border: 2px solid red; */
-        width: 60%;
+        width: 50%;
           color: #fff;
    
   background-color: rgba(255,255,255,0.06);
   border: 1px solid rgba(255,255,255,0.1);
+  border: 2px solid #fff;
  
   border-radius: 15px;
   padding: 32px;
@@ -32,37 +33,54 @@ margin-bottom: 100px;
     @media screen and (max-width:600px) {
 .signup{
      height: 60%;
-     width: 80%;
+     width: 100% !important;
 }
     }
     @media screen and (max-width:1000px) {
 .signup{
      height: 60%;
-     width: 80%;
+     width: 100%;
+}
+.form_container{
+    width: 100% !important;
 }
     }
 input{
 position: relative;
+border-radius: 20px;
   margin-bottom: 3rem;
   padding: 0.5rem 0;
   background-color: transparent;
   outline: none;
   border: unset;
-  border-bottom: 1.5px solid white;
+  border: 1.5px solid white !important;
   font-size: 1.25rem;
   letter-spacing: 1.5px;
-  color: white;
+  color: white !important;
   z-index: 1;
 
 }
+textarea{
+border-radius: 20px;
 
+}
+input:focus{
+    background-color: #243833;
+    background-color: #101010;
+}
+textarea:focus{
+    background-color: #243833;
+    background-color: #101010;
+
+   
+
+}
 .heading {
     
 
   text-align: center;
   margin: 1rem;
-  margin-bottom: 5rem;
-  text-transform: uppercase;
+z-index: 1999;
   letter-spacing: 2px;
 }
 .btn_cont{
@@ -79,4 +97,66 @@ padding: 10px;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 border-radius: 10px;
 border: 1px solid #fff;
+}
+body{
+    /* background: radial-gradient(rgb(29, 51, 51), #000) !important; */
+    background: radial-gradient(#46494D , #212121 , #101010);
+}
+/* .watery{
+
+     display: flex; 
+     flex-direction: row;
+z-index: -11111;
+transform: translateY(-100px);
+font-size: 100px;
+} */
+
+.tacbox {
+  display:flex !important;
+  gap: 20px;
+  text-align: left;
+  
+ 
+}
+
+
+/* checkbox css */
+.check{
+    border-width: 1px solid green;
+}
+input[type=checkbox] {
+  position: relative;
+	border: 2px solid #000;
+	border-radius: 2px;
+	background: none;
+	cursor: pointer;
+	
+	height: 25px;
+	width: 75px;
+	-webkit-appearance: none;
+  opacity: .5;
+}
+
+input[type=checkbox]:hover {
+  opacity: 1;
+}
+
+input[type=checkbox]:checked {
+  background-color: #082008;
+  background-color: #101010;
+  opacity: 1;
+}
+
+input[type=checkbox]:before {
+  content: '';
+  position: absolute;
+  right: 50%;
+  top: 50%;
+  width: 4px;
+  height: 10px;
+  border: solid #FFF;
+  border-width: 0 2px 2px 0;
+  margin: -1px -1px 0 -1px;
+  transform: rotate(45deg) translate(-50%, -50%);
+  z-index: 2;
 }
