--- a/richfeyn/app/static/css/style.css
+++ b/richfeyn/app/static/css/style.css
@@ -1,4 +1,12 @@
-/* navbar */
+/* navbar
+
+    @media (prefers-color-scheme: dark) {
+
+
+
+    } */
+
+    
  @import url('https://fonts.cdnfonts.com/css/baloo-bhai');
 
 /* navbar */
@@ -16,8 +24,10 @@ html{
 body{
     overflow-x: hidden;
     background-color: #000000 !important;
+    z-index: -1;
 }
 nav{
+
     height: 4.5rem;
     width: 100vw;
     /* background-color: #292828; */
@@ -25,14 +35,18 @@ nav{
     box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
     display: flex;
     position: fixed;
-    z-index: 10;
+    z-index: 10000000;
 
 }
+
 nav.scroll{
      background-color: #292828;
      transition: 0.3s ease-in-out;
 }
+#navbar:hover{
+     background-color: #292828 !important;
 
+}
 /*Styling logo*/
 .logo{
     padding:1vh 1vw;
@@ -48,17 +62,23 @@ nav.scroll{
     display: flex;
     list-style: none; 
     width: 88vw;
-    padding: 0 0.7vw;
+    padding: 0 5 vw;
     justify-content: space-evenly;
     transform: translateY(10px);
+    scale: 0.96888;
     align-items: center;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
 }
 .nav-links li a{
     text-decoration: none;
     margin: 0 0.7vw;
     color: #fff;
+    letter-spacing: 0px ;
+    padding: 20px;
+
 }
+
+
 .nav-links li a:hover {
     color: #53f04d;
 }
@@ -223,7 +243,14 @@ nav.scroll{
 @media only screen and (max-width: 600px) {
 .contain{
     display: flex;
+
     flex-direction: column;
+}
+.RichFeyn{
+    font-size: 2.5rem;
+}
+.rich_data{
+    font-size: 1rem !important;
 }
 }
 .left{
@@ -356,11 +383,18 @@ box-shadow: 0 10px 10px -5px;
     align-items: center;
     margin: auto;
     justify-content:center;
+margin-bottom: -200px !important;
+
+}
+.containers{
+        margin-top: -100px;
+
 }
 .flow_img{
-width: 110% ;
+    margin-top: 20px;
+    align-items: center;
+width: 100% ;
 height: 70%;
-
  
 }
 
@@ -507,7 +541,7 @@ height: 70%;
     margin-left: 10%;
     font-family: 'baloo bhai 2';
     font-weight: bolder;
-    font-family: 'Lucida Sans Unicode','Lucida Grande','Lucida Sans','DejaVu Sans Condensed',sans-serif;
+   font-family: 'Trebuchet MS' , sans-serif !important ; 
     font-weight: 800;
     color: #fff;
 
@@ -520,11 +554,12 @@ height: 70%;
   padding: 0;
   margin: 0 auto;
 }
+
 summary {
   font-size: 1.0rem;
   font-weight: 600;
   background-color: #fff;
-  
+  font-family: 'Trebuchet MS' , sans-serif !important ; 
   color: #333;
   padding: 1rem;
   margin-bottom: 1rem;
@@ -607,7 +642,7 @@ details[open] summary ~ * {
         position: relative;
         width: 80%;
         height: 700px;
-        margin: 20px auto;
+        margin: 40px auto;
     }
 
     .slide {
@@ -684,7 +719,15 @@ height:200px;}
         top: 50%;
     }
     }
+    @media screen and (max-width:800px) {
+        .containers{
+height:300px;}
+        }
 
+            @media screen and (max-width:100px) {
+        .containers{
+height:400px;}
+        }
     /* making a different slider for mobile */
 #phone{
     display: none;
@@ -710,6 +753,8 @@ footer{
 .hover-effect1 {
   min-height: 20px;
   text-align: center;
+  width: 200%;
+  
 }
 .hover-effect1 ul {
  padding-top: 1px;
@@ -780,4 +825,146 @@ text-align: center;
 }
 p{
     color: #fff;
+}
+
+/* new footer */
+
+.bg-footer {
+    background-color: black;
+    padding: 30px 0 10px;
+    margin-top: 30px;
+}
+.footer-heading {
+    /* letter-spacing: 1px; */
+    scale: 0.959999;
+
+    width: 200%;
+}
+
+.last_sec{
+       width: 200%;
+}
+
+.foot_data{
+    width: 200%;
+    line-height:19px; 
+    /* color: #9b9797 !important; */
+    text-align: left;
+    color: #acacac;
+    /* line-height: 40px; */
+    text-decoration: none;
+    font-size: 14px;
+    transition: all 0.5s;
+}
+.footer-link{
+    scale: 0.95999;
+}
+
+
+@media screen and (max-width:1000px) {
+.footer-heading {
+    /* letter-spacing: 0px; */
+    width: 100%;
+}
+.foot_data{
+    width: 100% !important;
+    line-height:19px; 
+    color: #6b6868 !important;
+    text-align: left;
+    
+}
+.hover-effect1 {
+  min-height: 20px;
+  text-align: center;
+  width: 100%;
+  
+}
+.input-text{
+    width: 60% !important;
+}
+
+}
+
+.footer-link .aa {
+    color: #acacac;
+    line-height: 28px;
+    text-decoration: none;
+    font-size: 14px;
+    transition: all 0.5s;
+    scale: 0.95999;
+}
+
+.footer-link a:hover {
+    color: #acacac;
+}
+
+.input-text{
+    background-color: #2b2a2a;
+    color:#000;
+    width: 120%;
+    height: 30px;
+}
+.input-text:focus{
+    background-color: #fff;
+    border: none;
+}
+:focus{outline: none;}
+
+
+.contact-info {
+    color: #acacac;
+    font-size: 14px;
+}
+
+.footer-social-icon {
+    font-size: 15px;
+    height: 34px;
+    width: 34px;
+    line-height: 34px;
+    border-radius: 3px;
+    text-align: center;
+    display: inline-block;
+}
+
+.facebook {
+    background-color: #4e71a8;
+    color: #ffffff;
+}
+
+.twitter {
+    background-color: #55acee;
+    color: #ffffff;
+}
+
+.google {
+    background-color: #d6492f;
+    color: #ffffff;
+}
+
+.apple {
+    background-color: #424041;
+    color: #ffffff;
+}
+
+.footer-alt {
+    color: #acacac;
+}
+
+.footer-heading {
+    position: relative;
+    padding-bottom: 12px;
+}
+
+i #social-fb :hover{
+color: #2c7bfe !important;
+}
+
+i #social-yt :hover{
+color: #fe2c2c!important;
+}
+i #social-tw :hover{
+color: #2ef3e9!important;
+}
+i #social-in :hover{
+color: #fe2cc9!important;
 }
